--- a/info-service.yml
+++ b/info-service.yml
@@ -4,4 +4,6 @@ my.name: mohit
 spring:
   application:
     name: info-service
-application.name: info-service-update
+# application.name: info-service-update
+application.name: rating-service-update-webhook
+
