--- a/application.yml
+++ b/application.yml
@@ -14,6 +14,9 @@ spring:
     port=5672
     username=guest
     password=guest
+  zipkin:
+    base-url: http://localhost:9411/zipkin/
+    
 
 logging:
   level:
