--- a/application.yml
+++ b/application.yml
@@ -10,12 +10,12 @@ management:
   #RabbitMQ connection details
 spring:
   rabbitmq:
-    host:localhost
-    port=5672
-    username=guest
-    password=guest
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   zipkin:
-    base-url: http://localhost:9411/zipkin/
+    base-url: "http://localhost:9411/"
     
 
 logging:
