--- a/application.yml
+++ b/application.yml
@@ -12,8 +12,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: guest
-    password: guest
+#     username: guest
+#     password: guest
   zipkin:
     base-url: "http://localhost:9411/"
     enabled: true
