--- a/application.yml
+++ b/application.yml
@@ -17,11 +17,12 @@ spring:
   zipkin:
     base-url: "http://localhost:9411/"
     enabled: true
-  vault:
-    port: 8200
-    scheme: http
-    authentication: token
-    token: s.2UoASbr6PBaJ27KyeYFJFZ1d
+  cloud:
+      vault:
+        port: 8200
+        scheme: http
+        authentication: token
+        token: s.2UoASbr6PBaJ27KyeYFJFZ1d
 
 logging:
   level:
