--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,3 @@
-
 management:
   security:
     enabled: false
@@ -18,11 +17,14 @@ spring:
     base-url: "http://localhost:9411/"
     enabled: true
   cloud:
-    vault:
-      port: 8200
-      scheme: http
-      authentication: token
+    config:
+#      port: 8200
+#      host: 127.0.0.1
+#      scheme: http
+#      authentication: token
       token: s.2UoASbr6PBaJ27KyeYFJFZ1d
+      uri: http://localhost:8888
+
 
 logging:
   level:
