--- a/application.yml
+++ b/application.yml
@@ -17,6 +17,8 @@ spring:
     base-url: "http://localhost:9411/"
     enabled: true
   cloud:
+    config:
+      uri: http://localhost:8888
     vault:
       port: 8200
       host: localhost
