--- a/application-docker.yml
+++ b/application-docker.yml
@@ -6,11 +6,11 @@ management:
       exposure:
         include: "*"
 
-  #RabbitMQ connection details
 spring:
   rabbitmq:
     host: rabbitmq
-    addresses: rabbitmq:5672
+    port: 5672
+#    addresses: rabbitmq:5672
   zipkin:
     base-url: "http://zipkin-server:9411/"
     enabled: true
