--- a/catalog-service-docker.yml
+++ b/catalog-service-docker.yml
@@ -1,9 +1,13 @@
 server:
-  port: 8081
+  port: ${PORT:8081}
 spring:
-  application:
-    name: catalog-service
   cloud:
     vault:
-
-    host: vault
+      kv:
+        enabled: true
+        backend: secret
+      port: 8200
+      host: vault
+      scheme: http
+      authentication: token
+      token: 934f9eae-31ff-a8ef-e1ca-4bea9e07aa09
