--- a/eureka-service-docker.yml
+++ b/eureka-service-docker.yml
@@ -1,6 +1,13 @@
 server:
   port: ${SERVER_PORT:8761}
 spring:
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    #    addresses: rabbitmq:5672
+  zipkin:
+    base-url: "http://zipkin-server:9411/"
+    enabled: true
   eureka:
     client:
       register-with-eureka: false
