--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,7 +1,11 @@
 server:
-  port: ${SERVER_PORT:8761}
-spring:
-  eureka:
-    client:
-      register-with-eureka: false
-      fetch-registry: false
+  port: 8761
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
