--- a/eureka-server-docker.yml
+++ b/eureka-server-docker.yml
@@ -1,5 +1,13 @@
 server:
-  port: ${SERVER_PORT:8761}
+  port: 8761
+eureka:
+  instance:
+    hostname: eureka-server
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 spring:
   rabbitmq:
     host: rabbitmq
@@ -8,7 +16,3 @@ spring:
   zipkin:
     base-url: "http://zipkin-server:9411/"
     enabled: true
-  eureka:
-    client:
-      register-with-eureka: false
-      fetch-registry: false
