updating config files

--- a/info-service-docker.yml
+++ b/info-service-docker.yml
@@ -1,12 +1,12 @@
 server:
   port: ${PORT:8082}
-spring:
-  rabbitmq:
-    host: rabbitmq
-    port: 5672
-  #    addresses: rabbitmq:5672
-  zipkin:
-    base-url: "http://zipkin-server:9411/"
-    enabled: true
+#spring:
+#  rabbitmq:
+#    host: rabbitmq
+#    port: 5672
+#  #    addresses: rabbitmq:5672
+#  zipkin:
+#    base-url: "http://zipkin-server:9411/"
+#    enabled: true
 
 
