--- a/eureka-server-docker.yml
+++ b/eureka-server-docker.yml
@@ -8,11 +8,11 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-spring:
-  rabbitmq:
-    host: rabbitmq
-    port: 5672
-    #    addresses: rabbitmq:5672
-  zipkin:
-    base-url: "http://zipkin-server:9411/"
-    enabled: true
+#spring:
+#  rabbitmq:
+#    host: rabbitmq
+#    port: 5672
+#    #    addresses: rabbitmq:5672
+#  zipkin:
+#    base-url: "http://zipkin-server:9411/"
+#    enabled: true
