--- a/application-docker.yml
+++ b/application-docker.yml
@@ -5,8 +5,7 @@ spring:
   zipkin:
     base-url: "http://zipkin-server:9411/"
     enabled: true
-  eureka:
-    client:
-      service-url:
-        defaultZone: "http://eureka-server:8761/eureka/"
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://service-registry:8761/eureka/
