updating config files

--- a/application-docker.yml
+++ b/application-docker.yml
@@ -5,6 +5,16 @@ spring:
   zipkin:
     base-url: "http://zipkin-server:9411/"
     enabled: true
+  cloud:
+    vault:
+      kv:
+        enabled: true
+        backend: secret
+      port: 8200
+      host: vault
+      scheme: http
+      authentication: token
+      token: 934f9eae-31ff-a8ef-e1ca-4bea9e07aa09
 eureka:
   client:
     service-url:
