updating the config server to fetch properties form vault

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,15 +1,15 @@
 server:
   port: ${PORT:8081}
 my.name: mohit
-spring:
-  cloud:
-    vault:
-      kv:
-        enabled: true
-        backend: secret
-      port: 8200
-      host: localhost
-      scheme: http
-      authentication: token
-      token: 934f9eae-31ff-a8ef-e1ca-4bea9e07aa09
+#spring:
+#  cloud:
+#    vault:
+#      kv:
+#        enabled: true
+#        backend: secret
+#      port: 8200
+#      host: localhost
+#      scheme: http
+#      authentication: token
+#      token: 934f9eae-31ff-a8ef-e1ca-4bea9e07aa09
 
