--- a/application.yml
+++ b/application.yml
@@ -10,11 +10,13 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-  #     username: guest
-  #     password: guest
   zipkin:
     base-url: "http://localhost:9411/"
     enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 logging:
   level:
